--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.1.0",
+    "@testing-library/react": "^9.3.0",
     "jest-dom": "^4.0.0",
     "react-testing-library": "^8.0.1"
   }
